# green-bucket

./: .gitignore  Pipfile  README.md  asx.py  asxdata.py  candlestick-IFN.html  candlestick-NAN.html  candlestick-SPT.html  candlestick-WOW.html  candlestick-ZNO.html  gui.py  main.py  mydatabase.py  mydb.sqlite  mydb.sqlite-journal  portfoliotracker.py  pyproject.toml  stocks_list.csv  test.ipynb  tx.csv
portfolio/: sample_asx.csv
tests/: test_green_bucket.py
transactions/: etl.py  holdings.py
