[tool.poetry]
name = "green-bucket"
version = "0.1.0"
description = "Equity tax helper"
authors = ["Bob Jin <automaticjinandtonic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
numpy = "^1.17"
requests = "^2.22"
plotly = "^4.2"
sqlalchemy = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
